# pysindy-experiments

./: .gitignore  README.md  composite_plots.py  pyproject.toml  run_exps.sh  setup.cfg
.github/workflows/: main.yaml  release.yml
src/sindy_exp/: __init__.py  _data.py  _diffrax_solver.py  _inspect_to_sympy.py  _odes.py  _plotting.py  _typing.py  _utils.py  config.py  data.py  debug.py  gridsearch.py  odes.py  pdes.py  plotting.py  typing.py  utils.py
src/sindy_exp/gridsearch/: __init__.py  typing.py
tests/: test_all.py  test_gridsearch.py
