[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysindy-experiments"
dynamic = ["version"]
description = "A flexible library for constructing dynamics ML experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Machine Learning", "Science", "Mathematics", "Experiments"]
authors = [
  {email = "jacob.stevens.haas@gmail.com", name = "Jake Stevens-Haas"}
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Framework :: Jupyter",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "matplotlib",
  "numpy >= 2.0.0",
  "seaborn",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest >= 6.0.0",
  "pytest-cov",
  "flake8",
  "flake8-comprehensions>=3.1.0",
  "black",
  "coverage",
  "isort",
  "pre-commit",
  "codecov",
  "tomli",
]

[project.urls]
homepage = "https://github.com/Jake-Stevens-Haas/gen-experiments"

[tool.setuptools_scm]

[tool.black]
line-length = 88
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | .vscode
  | version.py
  | build
  | dist
  | scratch
  | env
)/
'''
preview = true

[tool.codespell]
skip = '*.html,./env,./scratch/*,todo'
ignore-words-list = "nd, aks, ser"

[tool.isort]
profile = "black"
src_paths = ["src/sindy_exp", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::RuntimeWarning",
  "ignore::UserWarning",]
addopts = '-m "not slow"'
markers = ["slow"]

[tool.mypy]
files = [
  "src/sindy_exp/__init__.py",
  "src/sindy_exp/utils.py",
  "src/sindy_exp/gridsearch/typing.py",
  "tests/test_all.py",
  "tests/test_gridsearch.py",
]

[[tool.mypy.overrides]]
module="sklearn.*"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="scipy.*"
ignore_missing_imports=true
